Thu Jun 20 05:08:53 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_marks): fix wrong option. FALSE means major/full GC.
	  It should be TRUE (minor marking).

Thu Jun 20 02:44:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (waitpid): should not return 0 but wait until exit
	  unless WNOHANG is given.  waiting huge process may return while
	  active, for some reason.

Thu Jun 20 01:34:15 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bdigit_roomof): Use SIZEOF_BDIGITS.
	  (bigfixize): Refine an ifdef condition.
	  (rb_absint_size): Use bdigit_roomof.
	  (rb_absint_singlebit_p): Ditto.
	  (rb_integer_pack): Ditto.
	  (integer_pack_fill_dd): Use BITSPERDIG.
	  (integer_unpack_push_bits): Use BITSPERDIG, BIGLO and BIGDN.

Thu Jun 20 01:07:39 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (MARKED_IN_BITMAP, FL_TEST2): return boolean value since always
	  used as boolean value.

	* gc.c (MARK_IN_BITMAP, CLEAR_IN_BITMAP): evaluate bits once.

Thu Jun 20 00:05:07 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (RVALUE_PROMOTED): fix type.

Wed Jun 19 23:39:01 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_marks_test): rewrite checking code.
	  When RGENGC_CHECK_MODE >= 2, all minor marking, run normal minor
	  marking *and* major/full marking. After that, compare the results
	  and shows BUG if a object living with major/full marking but dead
	  with minor marking.
	  After detecting bugs, print references information.
	  (RGENGC_CHECK_MODE == 2, show references to dead object)
	  (RGENGC_CHECK_MODE == 3, show all references)

Wed Jun 19 23:51:48 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigfixize): Use rb_absint_size.
	  (check_shiftdown): Ditto.
	  (big2ulong): Use bdigit_roomof.

Wed Jun 19 23:32:23 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (RVALUE_PROMOTED): check consistency between oldgen flag and
	  oldgen bitmap if RGENGC_CHECK_MODE > 0.

Wed Jun 19 23:29:29 2013  Koichi Sasada  <ko1@atdot.net>
